--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+
+<button class="test">Hello from the otha side </button>
+<app-footer></app-footer>
