almost done create question

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-navbar></app-navbar>
-
-<button class="test">Hello from the otha side </button>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
