--- a/src/app/quest-ans/create-quest/create-quest.component.html
+++ b/src/app/quest-ans/create-quest/create-quest.component.html
@@ -1,1 +1,37 @@
-<p>create-quest works!</p>
+<form [formGroup]="createQuestForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label for="title">Question Title:</label>
+      <input id="title" type="text" formControlName="questTitle" required>
+      <div *ngIf="createQuestForm.get('questTitle')?.invalid && createQuestForm.get('questTitle')?.touched">
+        <small>Title is required.</small>
+      </div>
+    </div>
+  
+    <div>
+      <label>Quest Description:</label>
+      <angular-editor formControlName="htmlContent" [config]="config"></angular-editor>
+      <div *ngIf="createQuestForm.get('htmlContent')?.invalid && createQuestForm.get('htmlContent')?.touched">
+        <small>Description is required.</small>
+      </div>
+    </div>
+  
+    <div>
+      <label>Quest Tags:</label>
+      <div>
+        <label *ngFor="let tag of tags; let i = index">
+          <input type="checkbox" [(ngModel)]="tag.selected" [name]="'tag' + i">
+          <h5>{{ tag.name }}</h5>
+        </label>
+      </div>
+    </div>
+  
+    <button type="submit" [disabled]="createQuestForm.invalid">Create Question</button>
+  </form>
+  
+  <h5>Quest Preview:</h5>
+  <div>
+    <h3>{{ createQuestForm.get('questTitle')?.value }}</h3>
+    <div [innerHTML]="createQuestForm.get('htmlContent')?.value"></div>
+    <p>Tags: {{ getSelectedTags() }}</p>
+  </div>
+  
