--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+<nav>
+    <div class="nav-links align-items-center">
+        <div><img src="assets/images/Icon.png" alt="" class="img fs-4 ">
+            <span class="fs-4 mx-2 mt-3">Stack Underflow</span>
+        </div>
+
+        <ul class="d-flex">
+            <li>View All</li>
+            <li class="center">Ask a Question</li>
+            <li class="upward">Services</li>
+            <li class="forward">Feedback</li>
+        </ul>
+    </div>
+</nav>
