--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -44,7 +44,7 @@ body{
   left: 0;
   height: 3px;
   width: 0%;
-  background: #34efdf;
+  background: #b69cff;
   border-radius: 12px;
   transition: all 0.4s ease;
 }
