--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,10 +5,10 @@
         </div>
 
         <ul class="d-flex">
-            <li>View All</li>
-            <li class="center">Ask a Question</li>
-            <li class="upward">Services</li>
-            <li class="forward">Feedback</li>
+            <li class="center"><a >View All</a></li>
+            <li class="center"><a>Ask a Question</a></li>
+            <li class="center"><a>Services</a></li>
+            <li class="center"><a>Feedback</a></li>
         </ul>
     </div>
 </nav>
