--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-links align-items-center">
-        <div><img src="assets/images/Icon.png" alt="" class="img fs-4 ">
+        <div><img src="assets/Icon.png" alt="" class="img fs-4 ">
             <span class="fs-4 mx-2 mt-3">Stack Underflow</span>
         </div>
 
