--- a/src/app/quest-ans/view-single-quest/view-single-quest.component.html
+++ b/src/app/quest-ans/view-single-quest/view-single-quest.component.html
@@ -1,82 +1,31 @@
-<!-- 
-    <header *ngFor="let question of questions">
-        <h1>{{question.title}}</h1>
-        <div class="question-details">
-            <span>Asked by User123</span>
-            <span>on September 28, 2024</span>
-        </div>
-    </header>
+<div class="question-container ">
+  <div class="question-title">
+    <h1>{{ question.title }}</h1>
+  </div>
 
-    <main *ngFor="let question of questions">
+  <div class="question-meta">
+    <span>Posted by User{{ question.uid }} on {{ question.date | date: 'longDate' }}</span>
+    <span>Last updated on {{ question.updatedAt | date: 'longDate' }}</span>
+  </div>
 
-        <section class="answers-section">
-            <h2>Answers</h2>
-
-            <div class="answer">
-                <div class="answer-details">
-                    <span>Answered by User456</span>
-                    <span>on September 29, 2024</span>
-                </div>
-                <div class="answer-body">
-                    <p>This is a detailed answer to the question. The user provides an explanation or a solution here.</p>
-                </div>
-                <div class="vote">
-                    <button>Upvote</button>
-                    <button>Downvote</button>
-                    <span>Score: 10</span>
-                </div>
-            </div>
-
-            <div class="answer">
-                <div class="answer-details">
-                    <span>Answered by User789</span>
-                    <span>on September 30, 2024</span>
-                </div>
-                <div class="answer-body">
-                    <p>This is another answer providing a different perspective or solution.</p>
-                </div>
-                <div class="vote">
-                    <button>Upvote</button>
-                    <button>Downvote</button>
-                    <span>Score: 5</span>
-                </div>
-            </div>
-        </section>
-    </main>
-
-<angular-editor formControlName="htmlContent" [config]="config"></angular-editor> -->
-
-<!-- <form [formGroup]="answerForm" (ngSubmit)="onSubmit()">
-    <div>
-     <label>Quest Description:</label>
-     <angular-editor formControlName="htmlContent" [config]="config"></angular-editor>
-   </div>
- 
-     <button type="submit">Create Question</button>
- </form>
-
-<button class="p-2 m-3 border rounded-3">Submit Answer</button> -->
-<div class="question-container">
-    <div class="question-title">
-      <h1>{{ question.title }}</h1>
+  <div class="d-flex justify-content-space-between">
+    <div class="img">
+      
+      <button class="fs-5 border rounded-5" (click)="voteUp(question)">
+        <img src="assets/up-arrow-key.png" alt="Upvote">
+      </button>
+      <br>
+      <span>{{ question.voteCount || 0 }}</span> 
+      <br>
+      <button class="fs-5 border rounded-5" (click)="voteDown(question)" [disabled]="question.voteCount === 0">
+        <img src="assets/downwards-arrow-key.png" alt="Downvote">
+      </button>
     </div>
-    
-    <div class="question-meta">
-      <span>Posted by User{{ question.uid }} on {{ question.date | date: 'longDate' }}</span>
-      <span>Last updated on {{ question.updatedAt | date: 'longDate' }}</span>
-    </div>
-  
-    <div class="question-body">
+
+    <div class="question-body mx-3 d-flex justify-content-center align-items-center">
       <p [innerHTML]="question.description"></p>
     </div>
-  
-    <!-- Vote for Question -->
-    <div class="vote">
-      <button (click)="upvote(question)">Upvote</button>
-      <button (click)="downvote(question)">Downvote</button>
-      <span>Score: {{ question.score }}</span>
-    </div>
-     <!-- Answer Submission Form -->
+  </div>
   <div class="answer-form">
     <form [formGroup]="answerForm" (ngSubmit)="onSubmit()">
       <label for="answer">Your Answer:</label>
@@ -85,30 +34,38 @@
     </form>
   </div>
   
-  <!-- List of Answers -->
+
+ 
   <div class="answers-section">
     <h2>{{ answers.length }} Answers</h2>
     <div *ngFor="let answer of answers" class="answer-container">
       <div class="answer-meta">
         <span>Answered by User{{ answer.uid }} on {{ answer.date | date: 'longDate' }}</span>
       </div>
-  
+
       <div class="answer-body">
         <p [innerHTML]="answer.description"></p>
       </div>
-  
-      <div class="vote">
-        <button (click)="upvote(answer)">Upvote</button>
-        <button (click)="downvote(answer)">Downvote</button>
-        <span>Score: {{ answer.score }}</span>
+
+      <div class="img">
+        
+        <button class="fs-5 border rounded-5" (click)="voteUp(answer)">
+          <img src="assets/up-arrow-key.png" alt="Upvote">
+        </button>
+        <br>
+        <span>{{ answer.voteCount || 0 }}</span> 
+        <br>
+        <button class="fs-5 border rounded-5" (click)="voteDown(answer)">
+          <img src="assets/downwards-arrow-key.png" alt="Downvote">
+        </button>
       </div>
-  
+
       <button (click)="markBestAnswer(answer)" [disabled]="answer.isBest">
         {{ answer.isBest ? 'Best Answer' : 'Mark as Best Answer' }}
       </button>
     </div>
   </div>
- 
-  </div>
-  
-  
+</div>
+<angular-editor formControlName="htmlContent" [config]="config"></angular-editor>
+
+<button type="submit" class="m-3 border rounded-5">Submit Button</button>
